# project-templates

./: Makefile  README.md
c-template/: CMakeLists.txt
c-template/src/: PRJNAME.c  PRJNAME_config.h.in
realize/: .gitignore  CMakeLists.txt  Makefile
realize/cmake/: FindSmatch.cmake
realize/src/: do_generate_project.c  do_list_templates.c  do_print_usage.c  do_print_version.c  ezfs.c  ezfs.h  ezregex.c  ezregex.h  ezstring.c  ezstring.h  handle_opts.c  load_opts_defaults.c  read_config_rc.c  realize.c  realize_cli_opts.c  realize_cli_opts.h  realize_config.h.in  realize_defs.h  realize_generate.c  realize_generate.h  realize_io.c  realize_io.h  realize_types.h  show_opts.c  validate_opts.c
realize/tests/: stdlib_tests.h
template-c/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
template-c/src/: PRJNAME.c  PRJNAME_cli_opts.c  PRJNAME_cli_opts.h  PRJNAME_types.h  do_main_function.c  do_print_usage.c  do_print_version.c  handle_opts.c  load_opts_defaults.c  show_opts.c
template-c/src/cli/: PRJNAME.c  PRJNAME_defs.h  PRJNAME_io.c  PRJNAME_io.h  do_main_function.c  do_print_usage.c  do_print_version.c  handle_opts.c  load_opts_defaults.c  show_opts.c  validate_opts.c
template-c/src/lib/: PRJNAME_lib.c  PRJNAME_lib.h
template-c/tests/: check_main.c  test_example.c
