CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_BUILD_TYPE RelWithDebInfo)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
SET(CMAKE_PREFIX_PATH /usr/local;/opt/local)

ENABLE_TESTING()
FIND_PACKAGE(Check 3 REQUIRED)

PROJECT(
  realize
  VERSION 1.0
  LANGUAGES C
)

CONFIGURE_FILE(src/realize_config.h.in realize_config.h)

FILE(
  GLOB_RECURSE REALIZE_SOURCES
  src/*c
  src/*.h
)

ADD_EXECUTABLE(
  realize
  ${REALIZE_SOURCES}
)

TARGET_SOURCES(
  realize
  PRIVATE
  ${REALIZE_SOURCES}
)

TARGET_INCLUDE_DIRECTORIES(
  realize
  PUBLIC
  ${PROJECT_BINARY_DIR}
)

FILE (
  GLOB REALIZE_TEST_SOURCES
  tests/check_main.c
  tests/*.c
)

ADD_EXECUTABLE(
  realizetests
  ${REALIZE_TEST_SOURCES}
)

ADD_TEST(
  NAME realizetests
  COMMAND realizetests)

TARGET_LINK_LIBRARIES(
  realizetests
  PUBLIC
  ${CHECK_LIBRARIES}
)

TARGET_INCLUDE_DIRECTORIES(
  realizetests
  PUBLIC
  tests/
  ${CHECK_INCLUDE_DIRS}
  ${REALIZE_SOURCES}
)

INSTALL(
  TARGETS realize
)

if(MSVC)
  TARGET_COMPILE_OPTIONS(realize PRIVATE /W4 /WX)
else()
  TARGET_COMPILE_OPTIONS(realize PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-unused-parameter)
endif()

