CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_BUILD_TYPE RelWithDebInfo)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_MODULE_PATH
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake
    ${CMAKE_MODULE_PATH}
)
SET(CMAKE_PREFIX_PATH /usr;/usr/local;/opt/local)

PROJECT(
  PRJNAME
  VERSION 1.0
  LANGUAGES C
)

ENABLE_TESTING()

FIND_PACKAGE(
  Check
  0.15.2
  REQUIRED
)

CONFIGURE_FILE(
  src/PRJNAME_config.h.in
  PRJNAME_config.h
)

FILE(
  GLOB_RECURSE
  PRJNAME_CLI_SOURCES
  src/cli/*c
  src/cli/*.h
)

FILE(
  GLOB_RECURSE
  PRJNAME_LIB_SOURCES
  src/lib/*c
  src/lib/*.h
)

FILE(
  GLOB
  PRJNAME_TEST_SOURCES
  tests/check_main.c
  tests/*.c
)

ADD_EXECUTABLE(PRJNAME ${PRJNAME_CLI_SOURCES})
ADD_EXECUTABLE(PRJNAMEtests ${PRJNAME_TEST_SOURCES})
ADD_LIBRARY(PRJNAMElib ${PRJNAME_LIB_SOURCES})

TARGET_INCLUDE_DIRECTORIES(
  PRJNAME
  PUBLIC ${CMAKE_SOURCE_DIR}/src
         ${CMAKE_BINARY_DIR}
)

TARGET_INCLUDE_DIRECTORIES(
  PRJNAMElib
  PUBLIC ${CMAKE_SOURCE_DIR}/src
         ${CMAKE_BINARY_DIR}
)
TARGET_INCLUDE_DIRECTORIES(
  PRJNAMEtests
  PUBLIC tests/
         ${CHECK_INCLUDE_DIRS}
         ${CMAKE_SOURCE_DIR}/src
)

ADD_TEST(NAME PRJNAMEtests COMMAND PRJNAMEtests)

TARGET_LINK_LIBRARIES(PRJNAME PUBLIC PRJNAMElib)
TARGET_LINK_LIBRARIES(
  PRJNAMEtests
  PUBLIC ${CHECK_LIBRARIES}
         PRJNAMElib
)

INSTALL(TARGETS PRJNAME)

IF(MSVC)
  TARGET_COMPILE_OPTIONS(
    PRJNAME
    PRIVATE /W4
            /WX
  )
ELSE()
  TARGET_COMPILE_OPTIONS(
    PRJNAME
    PRIVATE -Wall
            -Wextra
            -Wpedantic
            -Werror
            -Wno-unused-parameter
  )
ENDIF()
